fixed column width on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -194,7 +194,7 @@ h2 {
 
 .blog-row {
     margin-top: 5%;
-    display: flex;
+    
     width: 100%;
 }
 
@@ -220,7 +220,6 @@ footer {
 }
 
 @media only screen and (min-width: 600px) {
-    
     .blog-image { 
         height: 100%;
     }
